--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,14 +42,11 @@
         <li class="nav-item app-header__nav_item">
           <%= link_to "Log Out", logout_path, method: :post, class: "btn btn-primary" %>
         </li>
-
         <% else %>
-
         <li class="nav-item app-header__nav_item">
-          <%= link_to "Log In", login_path, class: "btn btn-primary" %>
+          <%= link_to "Login with GitHub", github_login_path, class: "btn btn-primary" %>
         </li>
         <% end %>
-
       </ul>
     </nav>
   </header>
